# Castep-Parser

./: a.py  requirements.txt  setup.cfg  setup.py
castep_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/01-example_castepout/: iterations.gnu
examples/02-example_dir/: Cluster_min.tcl  Cluster_min.xyz  DeltaEnergy.gnu
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0004/: Conf_0004.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0005/: Conf_0005.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0007/: Conf_0007.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0008/: Conf_0008.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0009/: Conf_0009.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0010/: Conf_0010.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0011/: Conf_0011.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0015/: Conf_0015.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0018/: Conf_0018.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0019/: Conf_0019.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0021/: Conf_0021.castep
examples/02-example_dir/OUTPUTS_ORIGINAL/Conf_0022/: Conf_0022.castep
examples/03-example_dir_cp2k/: VMD_pdb.tcl
examples/03-example_dir_jupyter/: clustering.ipynb  clustering_2.ipynb
examples/03-example_dir_jupyter/.ipynb_checkpoints/: clustering-checkpoint.ipynb
src/: castep_parser_cmd.py  cp2k_output.py  cp2k_parser_cmd.py
src/utils/: Logger.py  find_files_recursive.py  parse_arguments.py
(+34 files in other folders)
