[metadata]
name = castep-parser
version = attr: version.__version__
description = Python script to parse CASTEP outputs.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
zip_safe = false
packages = find:
test_suite = test
include_package_data = true

[options.packages.find]
exclude =
    docs
    test
    dist
    build

[options.entry_points]
console_scripts =
    castep_parser_cmd = src.castep_parser_cmd:main_app
    cp2k_parser_cmd = src.cp2k_parser_cmd:main_app

[bdist_wheel]
universal = true

